# narc

./: .gitignore  .travis.yml  Readme.md  memory.x
narc_c/hw_api/: hw_api.h  hw_gpio  hw_gpio.h  hw_gpio_stm32l052xx  hw_gpio_stm32l052xx.1.c  hw_gpio_stm32l052xx.c  hw_gpt.h  hw_gpt_stm32l052xx.c
narc_rust/: Cargo.toml
narc_rust/.cargo/: config
narc_rust/app/: Cargo.toml  core
narc_rust/app/examples/: alloc.rs  blinky.rs  delay.rs  fsm.rs  led.rs  lib.rs  motor.rs  serial.rs  systick.rs  teste.rs  teste1.rs
narc_rust/app/src/: aux.rs  main.rs  peripherals.rs  peripherals_hal.rs
narc_rust/hal/: Cargo.toml  readme.md
narc_rust/hal/src/: adc.rs  delay.rs  dma.rs  flash.rs  gpio.rs  lib.rs  pwm.rs  pwm.rs.bkp  qei.rs  rcc.rs  serial.rs  spi.rs  time.rs  timer.rs
narc_rust/narc_hal/: Cargo.toml
narc_rust/narc_hal/src/: delay.rs  gpio.rs
narc_rust/src/: peripherals.rs
src/: main.rs  peripherals.rs
