[package]
name = "narc_app"
version = "0.1.0"
description = "NARC Project"
authors = ["Cecília Carneiro <cecilia.carneiroesilva@gmail.com>"]
repository = "https://github.com/ceciliacsilva/narc"
license = "MIT"

[dependencies]
cortex-m = { git = "https://github.com/ceciliacsilva/cortex-m", version = "0.5.7" }
cortex-m-rt = {version = "0.6.4", features = ["device"]}
cortex-m-semihosting = "0.3.1"
nb = "0.1.1"

[dependencies.stm32l052]
version = "0.1.1"
git = "https://github.com/ceciliacsilva/stm32l052"
features = ["rt"]

[dependencies.hal]
version = "0.1.0"
path = "../hal"

[dependencies.embedded-hal]
version = "0.2.1"