[package]
name = "hal"
version = "0.1.5"
authors = ["Cecília Carneiro <cecilia.carneiroesilva@gmail.com>"]
description = "..."
license = "MIT"

[dependencies]
cortex-m = { git = "https://github.com/ceciliacsilva/cortex-m", version = "0.5.7" }
cortex-m-rt = {version = "0.6.4"}
panic-semihosting = "0.4.0"
nb = "0.1.1"

[dependencies.stm32l052]
version = "0.1.1"
git = "https://github.com/ceciliacsilva/stm32l052"
features = ["rt"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"