[package]
name = "narc-hal"
version = "0.1.6"
authors = ["Cecília Carneiro <cecilia.carneiroesilva@gmail.com>"]
description = "HAL STM32L0"
license = "MIT"

[dependencies]
cortex-m = "0.5.8" 
cortex-m-rt = {version = "0.6.5"}
panic-semihosting = "0.4.0"
nb = "0.1.1"

[dependencies.stm32l052]
version = "0.1.2"
git = "https://github.com/ceciliacsilva/stm32l052"
branch = "rtfm0.4"
#path = "../../../../github/stm32l052"
features = ["rt"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"